--- a/ApiGateway/pom.xml
+++ b/ApiGateway/pom.xml
@@ -77,6 +77,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
 		<!-- Lombok for reducing boilerplate code -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -97,6 +98,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.glue42.gateway.client/gateway-authentication-api -->
+		<dependency>
+			<groupId>com.glue42.gateway.client</groupId>
+			<artifactId>gateway-authentication-api</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
 		<!-- Reactor Test for WebFlux Testing -->
 		<dependency>
 			<groupId>io.projectreactor</groupId>
@@ -111,6 +119,31 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<dependencyManagement>
